@@ -21,7 +21,8 @@
 # Ensure that the dejagnu(1) launcher is available for testing.
 if { ![info exists LAUNCHER] } {
     set LAUNCHER \
-	[file join [file dirname [testsuite file -source -top]] dejagnu]
+	[file normalize \
+	     [file join [file dirname [testsuite file -source -top]] dejagnu]]
 }
 verbose "Using LAUNCHER $LAUNCHER" 2
 
